2023-11-02T16:24:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6735417196 # 921
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-02
* notice: last 14d: unq all: 3 36
* notice: prev accum: outdated-unq outdated-all / unq all: 274 579 / 291 617
* notice: next accum: outdated-unq outdated-all / unq all: 275 582 / 291 618
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-10-19] / [2023-11-02]

2023-11-02T08:21:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6729985572 # 920
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-02
* notice: last 14d: unq all: 3 36
* notice: prev accum: outdated-unq outdated-all / unq all: 274 579 / 289 615
* notice: next accum: outdated-unq outdated-all / unq all: 274 579 / 291 617
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-10-19 2023-11-02]

2023-11-02T01:16:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6727061914 # 919
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-02
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 274 579 / 289 614
* notice: next accum: outdated-unq outdated-all / unq all: 274 579 / 289 615
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2023-10-19 2023-11-01]

2023-11-01T16:23:30Z: