@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-21T01:14:25Z",
-  "count" : 4,
+  "timestamp" : "2023-11-03T08:22:02Z",
+  "count" : 2,
   "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 2,
+  "count_decinc" : [ -2, +4 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
