@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-11-02T16:24:14Z",
+  "timestamp" : "2023-11-03T08:22:02Z",
   "count_outdated" : 582,
   "uniques_outdated" : 275,
-  "count" : 618,
-  "uniques" : 291,
+  "count" : 619,
+  "uniques" : 292,
   "clones" : [
     {
       "timestamp": "2023-10-20T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
+      "count_decinc": [ 2, 4 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-10-21T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-11-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
