@@ -1,11 +1,11 @@
 {
-  "count": 36,
-  "uniques": 3,
+  "count": 35,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2023-10-20T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-21T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-11-02T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-11-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
